--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,17 @@
 [build]
-  publish = "."
   functions = "netlify/functions"
+  publish = "."
 
-[build.environment]
-  NODE_VERSION = "18"
+[functions]
+  node_bundler = "esbuild"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
 
 [[redirects]]
-  from = "/api/*"
+  from = "/api/*"  
   to = "/.netlify/functions/:splat"
   status = 200
-
-[dev]
-  functions = "netlify/functions"
-  publish = "."
